# toy2-decomp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  build.py  decomp_utils.py  reccmp-project.yml
.github/workflows/: build-tools.yml
docs/: formats.html  index.html  style.css  tools.html
patcher/: GamePatches.cpp  GamePatches.h  Loader.h  Utilities.h  main.cpp
resources/: CURSOR114_1.cur  toy2.rc
src/: CharacterLoader.cpp  CharacterLoader.h  Common.h  DrawingDevice.cpp  DrawingDevice.h  FileUtils.cpp  FileUtils.h  InputManager.cpp  InputManager.h  InputTypes.h  LibraryMSVC.h  Logger.cpp  Logger.h  ModeSelect.cpp  ModeSelect.h  Nullsub.cpp  Nullsub.h  Numerics.cpp  Numerics.h  Random.cpp  Random.h  RawLoader.cpp  RawLoader.h  SaveManager.cpp  SaveManager.h  SoftwareRenderer.cpp  SoftwareRenderer.h
src/AudioManager/: AudioManager.cpp  AudioManager.h
src/NGNLoader/: NGNLoader.cpp  NGNLoader.h  NGNTypes.h  ObjectLoad.cpp  ObjectLoad.h
src/Nu3D/: BmpDataNode.cpp  BmpDataNode.h  Camera.cpp  Camera.h  Creature.h  Font.cpp  Font.h  Light.cpp  Light.h  Link.cpp  Link.h  Material.cpp  Material.h  Math.cpp  Math.h  Nu3D.cpp  Nu3D.h  Particles.cpp  Particles.h  Patch.cpp  Patch.h  Portal.cpp  Portal.h  Primitive.cpp  Primitive.h  Sprite.h  Viewport.cpp  Viewport.h
src/Renderer/: Glue.cpp  Glue.h  RenderType.h  Renderer.cpp  Renderer.h  Shadows.cpp  Shadows.h  Sprite.cpp  Sprite.h  SpriteRenderer.h  SpriteSheets.cpp  SpriteSheets.h
src/Tests/Patcher/: GamePatches.cpp  GamePatches.h  Loader.cpp  LoaderX.cpp  LoaderX.h  Utilities.h  dllmain.cpp  loader.cpp  loader.h  main.cpp
src/Toy2/: Actor.cpp  Actor.h  Animation.cpp  Animation.h  Buzz.cpp  Buzz.h  Collectables.cpp  Collectables.h  Collision.cpp  Collision.h  D3DApp.cpp  D3DApp.h  D3DAppTypes.h  FileUtils.cpp  FileUtils.h  LevelSelect.cpp  LevelSelect.h  Levels.cpp  Levels.h  MainMenu.cpp  MainMenu.h  Toy2.cpp  Toy2.h
src_main/: Logger.cpp  Logger.h  common.h  main.cpp
src_main/Toy2/: D3DApp.cpp  D3DApp.h  D3DAppTypes.h  FileUtils.cpp  FileUtils.h  Toy2.cpp  Toy2.h
src_testing/: dllmain.cpp  game_patches.cpp  game_patches.h  loader.cpp  loader.h  utilities.h
tools/: CMakeLists.txt
tools/Common/: CSVWriter.hpp  Creatures.hpp  DLLCommon.hpp  FileReader.hpp  GameStructs.hpp  Utils.hpp
tools/DatDumper/: main.cpp
tools/RawDecompressor/: main.cpp
tools/Resources/: functions_map.txt
tools/SaveViewer/: SaveViewer.cpp  SaveViewer.hpp
tools/ToyDebugger/: FreeCam.cpp  FreeCam.hpp  GameInterface.hpp  ImGuiWrapper.cpp  ImGuiWrapper.hpp  NoClip.hpp  imgui_impl_d3d3.cpp  imgui_impl_d3d3.hpp  main.cpp
tools/ToyRadar/: main.cpp
